--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 pytorch-lightning==1.9.3
 matplotlib==3.6.2
 matplotlib-inline==0.1.6
-#protobuf==3.20.*
+protobuf==3.20.*
 #tensorflow==2.11.1
 scipy==1.9.3
 #Shapely==1.8.0
